--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
     <title>QRCode component by Tiago Neves</title>
 </head>
 <body>
-    <!-- Aqui vou começar o meu primeiro projeto.
-        <div class="attribution">
-            Descobre mais projetos no <a href="https://github.com/TiagoNeves9?tab=repositories" target="_blank"> Meu Perfil</a>.
-            Codigo feito por <a href="#">Tiago Neves</a>
-        </div> -->
-
     <section class="container">
         <div class="card">
             <div class="qrcode-card qrcode"></div>
-            <h2>Scan the QR Code to discover other projects</h2>
-            <p>My first project in front-end</p>
+            <h2>Improve your front-end skills by building projects</h2>
+            <p>Scan the QR code to visit Frontedn Mentor and take your coding skills to the next level</p>
         </div>
     </section>
 
