--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <section class="container">
         <div class="card">
             <div class="qrcode-card qrcode"></div>
-            <h2>Scan to discover my profile</h2>
-            <p>First frontend project</p>
+            <h2>Improve your front-end skills by building projects</h2>
+            <p>Scan the QR code to visit Frontedn Mentor and take your coding skills to the next level</p>
         </div>
     </section>
 
