--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="qrcode-card qrcode"></div>
             <h2>Improve your front-end skills by building projects</h2>
-            <p>Scan the QR code to visit Frontedn Mentor and take your coding skills to the next level</p>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </section>
 
